Contract testing, integration testing and E2E testing